--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,18 @@
 
     <groupId>org.example</groupId>
     <artifactId>Hillel0404</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>lesson0205</module>
+    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>maven-surefire-common</artifactId>
+            <version>2.12</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
